<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:gravity="bottom"
        android:layout_marginBottom="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/reg_tv_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/txt_reg_tv_title"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="top"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/reg_tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_reg_tv_username" />

            <EditText
                android:id="@+id/reg_et_username"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:inputType="text"
                android:textSize="13sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/reg_tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_reg_tv_password" />

            <EditText
                android:id="@+id/reg_et_password"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:inputType="textPassword"
                android:textSize="13sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/reg_tv_pwsure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_reg_tv_pwsure" />

            <EditText
                android:id="@+id/reg_et_pwsure"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:inputType="textPassword"
                android:textSize="13sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/reg_tv_checkcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_reg_tv_checkcode" />

            <EditText
                android:id="@+id/reg_et_checkcode"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:inputType="text"
                android:textSize="13sp" />
            <TextView 
                android:id="@+id/reg_tv_chkcode"
                android:background="#ddd"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                 />
        </LinearLayout>
    </LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_weight="2">
	    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/reg_btn_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:text="@string/txt_tv_reg"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/reg_btn_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_btn_exit"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
	</LinearLayout>
</LinearLayout>